--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/rosblox/${{ github.event.repository.name }}:humble
+          tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:humble
